changed  edi-pet-contents-container max-width to 1000px so the info section is not squashed, correct delete and cancel buttons colours

--- a/frontend/src/pages/PetProfile/EditPetDetails.css
+++ b/frontend/src/pages/PetProfile/EditPetDetails.css
@@ -13,7 +13,7 @@ main {
 
 .edit-pet-contents-container {
   width: 100%;
-  max-width: 800px;
+  max-width: 1000px;
   margin: 0 auto;
   font-family: "Open Sans", sans-serif;
 }
@@ -37,7 +37,7 @@ main {
 
 .return-button,
 .back-btn {
-  font-size: clamp(1.25rem, 2.25vw, 1.5rem);
+  font-size: clamp(1rem, 1vw, 1.5rem);
   font-weight: 600;
   color: #1f3a5f;
   background: none;
@@ -168,9 +168,9 @@ main {
 .delete-btn {
   width: 100%;
   height: 40px;
-  background: #e8eaee;
+  background: transparent;
   color: #1f3a5f;
-  border: 3px solid #e8eaee;
+  border: 3px solid #1f3a5f;
   border-radius: 20px;
   cursor: pointer;
   font-family: "Open Sans", sans-serif;
@@ -179,9 +179,9 @@ main {
 }
 
 .delete-btn:hover {
-  background: #a5aebd;
-  color: #1f3a5f;
-  border: 3px solid #a5aebd;
+  background: #1f3a5f;
+  color: #ffc72c;
+  border: 3px solid #1f3a5f;
 }
 
 /* Form Section */
@@ -278,8 +278,8 @@ main {
 .form-actions-button .edit-btn-cancel {
   width: 100px;
   height: 40px;
-  border: 3px solid #e8eaee;
-  background: #e8eaee;
+  border: 3px solid #d2d7de;
+  background: #d2d7de;
   color: #1f3a5f;
   border-radius: 20px;
   cursor: pointer;
